# staking

./: .gitignore  Dockerfile  entrypoint.sh  nginxconfig.txt  pyproject.toml
.github/workflows/: deploy.yml
stakes_manager/: db.sqlite3  manage.py
stakes_manager/stakes/: admin.py  api.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
stakes_manager/stakes/migrations/: 0001_initial.py  0002_rename_multiplier_bet_next_multiplier_and_more.py  0003_bet_daily_profit.py  0004_remove_bet_next_multiplier.py  0005_bet_nextstate.py  0006_alter_bet_nextstate.py  0007_bet_method_betpending_method.py  0008_bet_number_of_bets_day.py
stakes_manager/stakes/static/css/: styles.css
stakes_manager/stakes_manager/: asgi.py  settings.py  urls.py  wsgi.py
stakes_manager/staticfiles/css/: styles.css
stakes_manager/templates/stakes/: betform.html  stake.html
