[tool.poetry]
name = "stakes-app"
version = "0.1.0"
description = ""
authors = ["JoseRabal <jrabal.segura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
gunicorn = "^23.0.0"
django-ninja = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
